@@ -19,14 +19,36 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>br.com.swconsultoria</groupId>
 			<artifactId>java-nfe</artifactId>
-			<version>4.00.14</version>
+			<version>4.00.40</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<!-- Implementação de referência (RI) -->
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.8</version>   <!-- ou 2.3.x mais recente -->
 		</dependency>
 
 		<dependency>
@@ -41,12 +63,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -59,7 +81,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+
+				<!-- Esta configuração vale para TODOS os goals do plugin -->
 				<configuration>
+					<!-- flag temporária para contornar o InaccessibleObjectException -->
+					<jvmArguments>
+						--add-opens java.base/java.nio.charset=ALL-UNNAMED
+					</jvmArguments>
+
+					<!-- evita que o lombok vá para o JAR final (goal repackage) -->
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -70,5 +100,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
